[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cxoneflow_audit"
dynamic = ["version"]
dependencies = [
    "docopt==0.6.2",
    "aiofiles==24.1.0",
    "dataclasses-json==0.6.7",
    "requests==2.32.3",
    "jsonpath-ng==1.7.0",
    "cxoneflow-kickoff-api@https://github.com/checkmarx-ts/cxone-flow/releases/download/2.1.1-43-prerelease/cxoneflow_kickoff_api-2.1.1rc44-py3-none-any.whl"
]
description = "CxOneFlow Onboarding Audit Tool"
requires-python = ">=3.9"

[project.scripts]
cxoneflow-audit = "cxoneflow_audit.__main__:cli_entry"

[tool.setuptools]
package-dir = {"cxoneflow_audit" = "cxoneflow_audit"}

[tool.setuptools.dynamic]
version = { attr = "cxoneflow_audit.__version__.__version__" }

